@@ -1,6 +1,7 @@
 import scala.io.Source.fromFile
 
 import Configurations._
+import Dependencies.baseDependencies
 import Settings._
 import Tasks._
 
@@ -8,143 +9,88 @@ scalaVersion in ThisBuild := Versions.scala
 
 scalaOrganization in ThisBuild := "org.typelevel"
 
-lazy val phoenixScala = (project in file("."))
-  .dependsOn(starfish)
-  .settings(commonSettings)
+// workaround for https://github.com/sbt/sbt/issues/2814
+scalaOrganization in updateSbtClassifiers := (scalaOrganization in Global).value
+
+lazy val phoenix = (project in file("phoenix"))
+  .dependsOn(core, objectframework)
   .configs(IT, ET)
   .settings(itSettings, etSettings)
+  .settings(commonSettings)
   .settings(
-    name := "phoenix-scala",
-    /** Work around SBT warning for multiple dependencies */
-    dependencyOverrides += "org.scala-lang" % "scala-library" % scalaVersion.value,
-    dependencyOverrides ++= Dependencies.slick.toSet,
-    dependencyOverrides ++= Dependencies.json4s.toSet,
-    ivyScala := ivyScala.value.map(_.copy(overrideScalaVersion = true)),
-    resolvers ++= Seq(
-      "hseeberger bintray" at "http://dl.bintray.com/hseeberger/maven",
-      "pellucid bintray"   at "http://dl.bintray.com/pellucid/maven",
-      "justwrote"          at "http://repo.justwrote.it/releases/",
-      "confluent"          at "http://packages.confluent.io/maven/",
-      Resolver.bintrayRepo("kwark", "maven") // Slick with deadlock patch
-    ),
     libraryDependencies ++= {
       import Dependencies._
-      akka ++ http ++ auth ++ json4s ++ fasterxml ++ apis ++ logging ++ test ++ misc ++ kafka
+      baseDependencies ++ akka ++ http ++ auth ++ fasterxml ++ apis ++ test ++ misc ++ kafka
     },
-    scalaSource in Compile := baseDirectory.value / "app",
-    scalaSource in Test    := baseDirectory.value / "test" / "unit",
-    scalaSource in IT      := baseDirectory.value / "test" / "integration",
-    scalaSource in ET      := baseDirectory.value / "test" / "integration",
-    resourceDirectory in Compile := baseDirectory.value / "resources",
-    resourceDirectory in Test    := baseDirectory.value / "test" / "resources",
-    resourceDirectory in IT      := (resourceDirectory in Test).value,
-    resourceDirectory in ET      := (resourceDirectory in Test).value,
-    Revolver.settings,
-    (mainClass in Compile) := Some("server.Main"),
+    (mainClass in Compile) := Some("phoenix.server.Main"),
+    // TODO @anna move the rest of location settings to common when tests are moved into subprojects
+    scalaSource in Test := baseDirectory.value / "test" / "unit",
+    scalaSource in IT := baseDirectory.value / "test" / "integration",
+    scalaSource in ET := baseDirectory.value / "test" / "integration",
+    resourceDirectory in Test := baseDirectory.value / "test" / "resources",
+    resourceDirectory in IT := (resourceDirectory in Test).value,
+    resourceDirectory in ET := (resourceDirectory in Test).value,
     initialCommands in console := fromFile("project/console_init").getLines.mkString("\n"),
     initialCommands in (Compile, consoleQuick) := "",
+    test := Def
+      .sequential(compile in Test, compile in IT, compile in ET, test in Test, test in IT, test in ET)
+      .value,
+    testOptions in Test += Tests.Argument(TestFrameworks.ScalaTest, "-oD"),
+    testForkedParallel in Test := true,
+    testForkedParallel in IT := true,
+    testForkedParallel in ET := true,
+    logBuffered in Test := false,
+    logBuffered in IT := false,
+    logBuffered in ET := false
+  )
+
+lazy val root = (project in file("."))
+  .aggregate(phoenix, seeder)
+  .settings(commonSettings)
+  .settings(
+    name := "phoenix-scala",
     writeVersion := sh.toTask(fromFile("project/write_version").getLines.mkString).value,
     unmanagedResources in Compile += file("version"),
-    testOptions in Test += Tests.Argument(TestFrameworks.ScalaTest, "-oD"),
-    javaOptions in Test ++= Seq("-Xmx2G", "-XX:+UseConcMarkSweepGC", "-Dphoenix.env=test"),
-    parallelExecution in Compile := true,
-    parallelExecution in Test := true,
-    parallelExecution in IT   := false,
-    parallelExecution in ET   := false,
-    fork in Test := false,
-    fork in IT   := true, /** FIXME: We couldn’t run ITs in parallel if we fork */
-    fork in ET   := true,
-    logBuffered in Test := false,
-    logBuffered in IT   := false,
-    logBuffered in ET   := false,
-    test in assembly := {},
-    addCommandAlias("all", "; clean; seeder/clean; it:compile; seeder/compile; test; seeder/assembly"),
-    scalafmtConfig := Some(file(".scalafmt")),
-    reformatOnCompileWithItSettings, // scalafmt
-    Revolver.settings,
-    assemblyMergeStrategy in assembly := {
-      case PathList("org", "joda", "time", xs @ _ *) ⇒
-        MergeStrategy.first
-      case PathList("org", "slf4j", xs @ _ *) ⇒
-        MergeStrategy.first
-      case PathList("ch", "qos", "logback", xs @ _ *) ⇒
-        MergeStrategy.first
-      case PathList("scala", xs @ _ *) ⇒ // FIXME: investigate what’s still pulling in Lightbend Scala?
-        MergeStrategy.first
-      case PathList("library.properties", xs @ _ *) ⇒ // FIXME: investigate what’s still pulling in Lightbend Scala?
-        MergeStrategy.first
-      case x ⇒
-        (assemblyMergeStrategy in assembly).value.apply(x)
-    }
+    addCommandAlias("all", "; clean; phoenix/it:compile; test; assembly"),
+    addCommandAlias("console", "phoenix/console")
   )
 
 lazy val seeder = (project in file("seeder"))
-  .dependsOn(phoenixScala)
+  .dependsOn(phoenix)
   .settings(
     commonSettings,
     libraryDependencies ++= Dependencies.gatling,
     cleanFiles += baseDirectory.value / "results",
-    scalafmtConfig := Some(file(".scalafmt")),
-    reformatOnCompileSettings, // scalafmt,
-    Revolver.settings,
     // we cannot fork and set javaOptions simply, as it causes some weird issue with db schema creation
-    initialize ~= (_ => System.setProperty("phoenix.env", "test" )),
-    assemblyMergeStrategy in assembly := {
-      case PathList("org", "joda", "time", xs @ _ *) ⇒
-        MergeStrategy.first
-      case PathList("org", "slf4j", xs @ _ *) ⇒
-        MergeStrategy.first
-      case PathList("ch", "qos", "logback", xs @ _ *) ⇒
-        MergeStrategy.first
-      case PathList("io", "netty", xs @ _ *) ⇒
-        MergeStrategy.first
-      case PathList("META-INF", "io.netty.versions.properties") ⇒
-        MergeStrategy.first
-      case x ⇒
-        (assemblyMergeStrategy in assembly).value.apply(x)
-    },
+    initialize ~= (_ ⇒ System.setProperty("phoenix.env", "test")),
     fullClasspath in assembly := { // thanks sbt for that hacky way of excluding inter-project dependencies
-      val phoenixClasses = (crossTarget in compile in phoenixScala).value.getAbsolutePath
+      val phoenixClasses = (crossTarget in compile in phoenix).value.getAbsolutePath
       (fullClasspath in assembly).value.filterNot(_.data.getAbsolutePath.startsWith(phoenixClasses))
     },
-    assemblyExcludedJars in assembly := (fullClasspath in assembly in phoenixScala).value
+    assemblyExcludedJars in assembly := (fullClasspath in assembly in phoenix).value
   )
 
-lazy val starfish = (project in file("starfish"))
+lazy val objectframework = (project in file("objectframework"))
+  .dependsOn(core)
   .settings(
     commonSettings,
-    scalafmtConfig := Some(file(".scalafmt")),
-    reformatOnCompileSettings, // scalafmt,
-    libraryDependencies ++= {
-      import Dependencies._
-      cats ++ shapeless ++ db ++ slick ++ json4s
-    }
+    libraryDependencies ++= baseDependencies,
+    libraryDependencies += "com.networknt" % "json-schema-validator" % "0.1.1"
   )
 
-fullAssembly := Def.task().dependsOn(writeVersion in phoenixScala, assembly in phoenixScala, assembly in seeder).value
+lazy val core = (project in file("core"))
+  .settings(
+    commonSettings,
+    libraryDependencies ++= baseDependencies
+  )
+
+fullAssembly := Def.task().dependsOn(writeVersion in root, assembly in phoenix, assembly in seeder).value
 
 // Injected seeds
-val seedCommand = " utils.seeds.Seeds seed --seedAdmins"
-seed     := (runMain in Compile in seeder).partialInput(seedCommand).evaluated
+val seedCommand = " seeds.Seeds seed --seedAdmins"
+seed := (runMain in Compile in seeder).partialInput(seedCommand).evaluated
 seedDemo := (runMain in Compile in seeder).partialInput(s"$seedCommand --seedDemo 1").evaluated
 
 // Gatling seeds
-seedOneshot    := (runMain in Compile in seeder).partialInput(" gatling.seeds.OneshotSeeds").evaluated
+seedOneshot := (runMain in Compile in seeder).partialInput(" gatling.seeds.OneshotSeeds").evaluated
 seedContinuous := (runMain in Compile in seeder).partialInput(" gatling.seeds.ContinuousSeeds").evaluated
-
-// Scalafmt
-scalafmtAll := Def.task().dependsOn(scalafmt in Compile in phoenixScala,
-                                     scalafmt in Test    in phoenixScala,
-                                     scalafmt in IT      in phoenixScala,
-                                     scalafmt in ET      in phoenixScala,
-                                     scalafmt in Compile in seeder).value
-
-scalafmtTestAll := Def.task().dependsOn(scalafmtTest in Compile in phoenixScala,
-                                         scalafmtTest in Test    in phoenixScala,
-                                         scalafmtTest in IT      in phoenixScala,
-                                         scalafmtTest in ET      in phoenixScala,
-                                         scalafmtTest in Compile in seeder).value
-
-// Test
-test := Def.sequential(compile in Test, compile in IT, compile in ET,
-                        test    in Test, test    in IT, test    in ET).value
